# SFMLgame_BrickBreaker

./: CMakeLists.txt  README.md  background.cpp  ball.cpp  ball.h  brick.h  entitesInteraction.cpp  entitesInteraction.h  game.cpp  game.h  gameEntity.h  main.cpp  paddle.cpp
src/background/: background.cpp  background.h
src/ball/: ball.cpp  ball.h
src/brick/: brick.cpp  brick.h
src/entity/: entityManager.cpp  entityManager.h  gameEntity.h  movingEntity.h
src/game/: game.cpp  game.h  gameConstants.h
src/interaction/: entitesInteraction.h
src/paddle/: paddle.cpp  paddle.h
